[package]
name = "rsa"
version = "0.1.0"
authors = ["zuccthebigone <matthew.dunn.bkk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
num-bigint = { version = "0.4.0", features = ["rand"] }
